test/spec_vectors/simd_splat/fail/module_5.wat
(module (func (result v128) i16x8.splat (i64.const 1)))